--- a/ui/dashboard.html
+++ b/ui/dashboard.html
@@ -26,11 +26,18 @@
             </div>
         </div>
         <div class="row mt-4">
-            <div class="col-md-12">
-                <h3>Historical Data</h3>
-                <div id="historical-data">
-                    <!-- Historical Data will be displayed here -->
-                    <iframe src="/historical" width="100%" height="400px" frameborder="0"></iframe>
+            <div class="col-md-6">
+                <h3>Protocol Distribution</h3>
+                <div id="protocol-chart">
+                    <!-- Protocol Pie Chart will be rendered here -->
+                    <iframe src="/charts" width="100%" height="400px" frameborder="0"></iframe>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <h3>AI Detected Anomalies</h3>
+                <div id="anomaly-chart">
+                    <!-- Anomalies will be displayed here -->
+                    <iframe src="/charts" width="100%" height="400px" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
